--- a/app/src/main/res/layout/fragment_statewise.xml
+++ b/app/src/main/res/layout/fragment_statewise.xml
@@ -7,7 +7,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="30sp">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
