--- a/app/src/main/res/layout/cardview.xml
+++ b/app/src/main/res/layout/cardview.xml
@@ -17,13 +17,14 @@
             style="@style/TextAppearance.MaterialComponents.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:layout_margin="10dp"
+            android:layout_marginTop="16dp"
             android:background="@android:color/transparent"
+            android:singleLine="true"
             android:text="Total CASES"
             android:textAllCaps="false"
-            android:singleLine="true"
-            android:textSize="25sp"
+            android:textColor="#ffffff"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
