--- a/app/src/main/res/layout/state_layout.xml
+++ b/app/src/main/res/layout/state_layout.xml
@@ -18,11 +18,12 @@
             android:layout_width="220dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:textAlignment="textStart"
             android:background="@android:color/transparent"
             android:text="Total CASES"
             android:textColor="#FFFFFF"
             android:textAllCaps="false"
-            android:textSize="25sp"
+            android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,6 +34,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="50dp"
             android:text="197,777"
+            android:textAlignment="inherit"
             android:textColor="@android:color/black"
             android:textSize="30sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -54,6 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="56"
+            android:textAlignment="inherit"
             android:textColor="@android:color/black"
             android:textSize="30sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/totalcase"
@@ -67,6 +70,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:text="Cured"
+
             android:textSize="20sp"
             app:layout_constraintEnd_toStartOf="@+id/subheading2"
             app:layout_constraintStart_toEndOf="@+id/subheading1"
@@ -81,6 +85,7 @@
             android:text="15,249"
             android:textColor="@android:color/black"
             android:textSize="30sp"
+            android:textAlignment="center"
             app:layout_constraintBaseline_toBaselineOf="@+id/totalcase"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/heading" />
