--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,17 +8,17 @@
 
     <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/newspaper"
         android:title="@string/title_dashboard" />
 
     <item
         android:id="@+id/navigation_statewise"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/chart_timeline_variant"
         android:title="@string/title_statewise" />
 
     <item
         android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/cellphone"
         android:title="@string/title_notifications" />
 
 </menu>
