--- a/app/src/main/res/layout/news_layout.xml
+++ b/app/src/main/res/layout/news_layout.xml
@@ -5,12 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/newCard"
     android:layout_width="match_parent"
+    app:contentPadding="10dp"
     android:layout_margin="10dp"
     android:layout_height="wrap_content">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:background="@android:color/white"
+        android:orientation="horizontal"
         android:layout_height="match_parent">
 
         <ImageView
@@ -26,30 +28,39 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/news_title"
+        <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:maxLines="2"
-            android:text="News Title"
-            android:layout_marginEnd="20dp"
-            android:textAlignment="textStart"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
-            app:layout_constraintStart_toEndOf="@+id/news_image"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/news_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Dummyedgfdfdfd"
-            android:textSize="10sp"
-            android:layout_marginStart="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/news_image"
-            app:layout_constraintTop_toBottomOf="@+id/news_title" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/news_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:maxLines="2"
+                android:text="News Title"
+                android:layout_marginEnd="20dp"
+                android:textAlignment="textStart"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                android:layout_alignParentTop="true"
+                />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/news_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Dummyedgfdfdfd"
+                android:textSize="10sp"
+                android:layout_marginStart="10dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="5dp"
+                />
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
 </com.google.android.material.card.MaterialCardView>
