added guides fragment ,implemented broadcast receiver

--- a/app/src/main/res/layout/cardview.xml
+++ b/app/src/main/res/layout/cardview.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
-    android:background="@color/colorPrimary"
     app:cardCornerRadius="10dp"
     app:cardElevation="8dp">
 
@@ -19,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_marginTop="16dp"
-            android:background="@android:color/transparent"
+            android:backgroundTint="@color/lightBlue"
             android:singleLine="true"
             android:text="Total CASES"
             android:textAllCaps="false"
@@ -32,8 +31,8 @@
             android:id="@+id/totalcase"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="15dp"
             android:text="197,777"
             android:textColor="@android:color/black"
             android:textSize="30sp"
@@ -44,7 +43,9 @@
             android:id="@+id/subheading1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="50dp"
             android:text="Total"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -56,11 +57,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="50dp"
             android:text="15,249"
+            android:textAlignment="center"
             android:textColor="@android:color/black"
             android:textSize="30sp"
-            android:textAlignment="center"
             app:layout_constraintBaseline_toBaselineOf="@+id/totalcase"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/heading" />
@@ -70,7 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="50dp"
             android:text="New"
             android:textSize="20sp"
             app:layout_constraintBaseline_toBaselineOf="@id/subheading1"
