--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -21,4 +21,9 @@
         android:icon="@drawable/cellphone"
         android:title="@string/title_notifications" />
 
+    <item
+        android:id="@+id/navigation_guides"
+        android:icon="@drawable/format_list_bulleted"
+        android:title="@string/title_guides" />
+
 </menu>
