--- a/app/src/main/res/layout/state_layout.xml
+++ b/app/src/main/res/layout/state_layout.xml
@@ -15,14 +15,14 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/heading"
             style="@style/TextAppearance.MaterialComponents.Button"
-            android:layout_width="220dp"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:textAlignment="textStart"
-            android:background="@android:color/transparent"
+            android:backgroundTint="@color/lightBlue"
             android:text="Total CASES"
-            android:textColor="#FFFFFF"
+            android:textAlignment="textStart"
             android:textAllCaps="false"
+            android:textColor="#FFFFFF"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -31,8 +31,8 @@
             android:id="@+id/totalcase"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="15dp"
             android:text="197,777"
             android:textAlignment="inherit"
             android:textColor="@android:color/black"
@@ -44,7 +44,9 @@
             android:id="@+id/subheading1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:text="Total"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -81,11 +83,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="20dp"
             android:text="15,249"
+            android:textAlignment="center"
             android:textColor="@android:color/black"
             android:textSize="30sp"
-            android:textAlignment="center"
             app:layout_constraintBaseline_toBaselineOf="@+id/totalcase"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/heading" />
@@ -95,7 +97,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="20dp"
             android:text="New"
             android:textSize="20sp"
             app:layout_constraintBaseline_toBaselineOf="@id/subheading1"
@@ -110,9 +112,9 @@
             android:text="@string/prediction"
             android:textColor="@android:color/holo_red_light"
             android:textStyle="bold"
-            app:layout_constraintLeft_toRightOf="@id/heading"
             app:layout_constraintBaseline_toBaselineOf="@+id/heading"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/heading" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
