--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -30,6 +30,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
+            android:visibility="gone"
             android:text="@string/update"
             android:textAlignment="center"
             android:textColor="@android:color/holo_red_light"
@@ -49,6 +50,7 @@
             android:textAlignment="center"
             android:textColor="@android:color/holo_red_light"
             android:textSize="12sp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/update_available"/>
