--- a/app/src/main/res/layout/state_layout.xml
+++ b/app/src/main/res/layout/state_layout.xml
@@ -16,6 +16,7 @@
             android:id="@+id/linear"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -23,11 +24,14 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/heading"
                 style="@style/TextAppearance.MaterialComponents.Button"
-                android:layout_width="220dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginEnd="10dp"
                 android:backgroundTint="@color/lightBlue"
-                android:maxLines="3"
                 android:text="Total CASES"
                 android:textAlignment="center"
                 android:textAllCaps="false"
@@ -39,14 +43,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_marginStart="42dp"
-                android:layout_marginEnd="13dp"
-                android:layout_marginTop="15dp"
-                android:layout_toEndOf="@+id/heading"
-                android:text="@string/prediction"
-                android:textAlignment="center"
+                android:layout_marginEnd="20dp"
+                android:layout_below="@+id/heading"
                 android:textColor="@android:color/holo_red_light"
-                android:textStyle="bold" />
+                android:text="@string/prediction" />
+
         </RelativeLayout>
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/totalcase"
